--- a/javaDemo/.settings/org.eclipse.core.resources.prefs
+++ b/javaDemo/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/main/java/javaCode/se/reflect/TestClassObject.java=UTF-8
+encoding//src/main/java/se/mythread/MyThread.java=UTF-8
